Ability to validate and add multiple materials /DD-42701